-XX:+BootstrapJVMCI is not compatible with TieredStopAtLevel < CompLevel_full_optimization

XMLWordPrintable

    • b16

        # Reproduce

        - Run in a debug jvm with
        ```
        java -XX:+UnlockExperimentalVMOptions -XX:+UseJVMCICompiler -XX:+BootstrapJVMCI -Xcomp -XX:TieredStopAtLevel=1
        ```

        # Symptom

        ```
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/Users/fool/workspace/open/jdk/src/hotspot/share/compiler/compileBroker.cpp:1246), pid=30568, tid=7939
        # assert(!TieredCompilation || comp_level <= TieredStopAtLevel) failed: Invalid compilation level
        #
        # JRE version: OpenJDK Runtime Environment (15.0) (fastdebug build 15-internal+0-adhoc.fool.jdk)


        Stack: [0x0000700007feb000,0x00007000080eb000], sp=0x00007000080ea960, free space=1022k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.dylib+0xc2cf5c] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x6d4
        V [libjvm.dylib+0xc2d671] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x3f
        V [libjvm.dylib+0x337627] report_vm_error(char const*, int, char const*, char const*, ...)+0x145
        V [libjvm.dylib+0x30fb2b] CompileBroker::compile_method(methodHandle const&, int, int, methodHandle const&, int, CompileTask::CompileReason, DirectiveSet*, Thread*)+0x18b
        V [libjvm.dylib+0x30f97f] CompileBroker::compile_method(methodHandle const&, int, int, methodHandle const&, int, CompileTask::CompileReason, Thread*)+0xb3
        V [libjvm.dylib+0x6752c5] JVMCICompiler::bootstrap(Thread*)+0x18f
        V [libjvm.dylib+0x5f39fb] JNI_CreateJavaVM+0x3a9
        C [libjli.dylib+0x3f47] JavaMain+0x10b
        C [libjli.dylib+0x6b3d] ThreadJavaMain+0x9
        C [libsystem_pthread.dylib+0x5d36] _pthread_start+0x7d
        C [libsystem_pthread.dylib+0x258f] thread_start+0xf
        ```

              Assignee:
              Jie Fu
              Reporter:
              Jie Fu
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: